updated github profile link
in footer and about sections

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                 <div class="social">
                     <a href="http://www.linkedin.com/in/shivrajhulbatte" data-toggle="linkedin" title="LinkedIn"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-                    <a href="#" data-toggle="github" title="GitHub"><i class="fa fa-github" aria-hidden="true"></i></a>
+                    <a href="https://github.com/shivrajpro" data-toggle="github" title="GitHub"><i class="fa fa-github" aria-hidden="true"></i></a>
                     <a href="https://www.hackerrank.com/shivrajhulbatte" data-toggle="hackerrank" title="HackerRank"><span class="simple-svg" data-icon="simple-icons:hackerrank" data-inline="false"></span></a>
                 </div>
             </article>
@@ -341,7 +341,7 @@
             <div class="social" >               
                 <div class="navbar-fixed-bottom">
                         <a href="http://www.linkedin.com/in/shivrajhulbatte"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        <a href="https://github.com/shivrajpro"><i class="fa fa-github" aria-hidden="true"></i></a>
                         <a href="https://www.hackerrank.com/shivrajhulbatte"><span class="simple-svg" data-icon="simple-icons:hackerrank" data-inline="false"></span></a>
                 </div>
                 <p class="small-text" style="text-align: center;">&copy;2018 Shivraj Hulbatte</p>
