commenting projects section

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                         <li><a href="#about">About Me</a></li>
                         <li><a href="#education">Education</a></li>
                         <li><a href="#skills">Skils</a></li>
-                        <li><a href="#projects">Projects</a></li>
                         <li><a href="#work">Work</a></li>
+                        <!-- <li><a href="#projects">Projects</a></li> -->
                 </ul>
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
@@ -266,9 +266,9 @@
             <div class="hidden-xs fill-screen fixed-bg" style="background-image:url(images/work-desk-1.jpg)"></div>
         </section>
 
-        <section class="row portfolio-sections" id="projects">
+        <section class="row portfolio-sections" id="work">
             <article class="sec-header">
-                <h3><i class="fa fa-file-code-o"></i><span> Projects</span></h3>
+                <h3><i class="fa fa-briefcase" aria-hidden="true"></i><span> Work Experience</span></h3>
             </article>
 
             <article class="row">
@@ -345,21 +345,21 @@
                 </article>
         </section>
 
-        <section class="row">
+        <!-- <section class="row">
             <div class="hidden-xs fill-screen fixed-bg" style="background-image:url(images/home-office.jpg)"></div>
         </section>
 
 
-        <section class="row portfolio-sections" id="work">
+        <section class="row portfolio-sections" id="projects">
             <article class="sec-header">
-                <h3><i class="fa fa-briefcase" aria-hidden="true"></i><span> Work Experience</span></h3>
+                <h3><i class="fa fa-file-code-o"></i><span> Projects</span></h3>
             </article>
 
             <article class="col-md-12">
                     <p style="font-size: 20px; ">Four Weeks “Internship” at <a href="http://www.smartscm.com"><strong>Smart Supply Chain Management System Software</strong></a> PVT.LTD. Kalyani Nagar,Yerwada,Pune-411006</p>
                     <p class="text-justify; margin-left:10px;" style="font-size: 18px;" >Worked on a project titled "Tracking Geolocation of Users by using Google Maps API" with the help of which I learned how to use 3rd party APIs to meet the organizational need in real world.</p>
             </article>
-        </section>
+        </section> -->
     </div>
 
     <footer class="container-fluid">
@@ -370,7 +370,7 @@
                         <a href="https://github.com/shivrajpro"><i class="fa fa-github" aria-hidden="true"></i></a>
                         <a href="https://www.hackerrank.com/shivrajhulbatte"><span class="simple-svg" data-icon="simple-icons:hackerrank" data-inline="false"></span></a>
                 </div>
-                <p class="small-text" style="text-align: center;">&copy;2018 Shivraj Hulbatte</p>
+                <p class="small-text" style="text-align: center;">&copy;2021 Shivraj Hulbatte</p>
             </div>
         </div>
     </footer>
