centre aligning work ex

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             </article>
 
             <article class="row">
-                <div class="box box-slim col-md-offset-2 col-sm-10">
+                <div class="box box-slim">
                    <div class="table-custom">
                         <dl class="dl-horizontal">
                                 <dt>1]</dt><dd> UI Developer <span class="project-duration">Aug 2020 - Present</span>  </dd>
@@ -295,12 +295,12 @@
                    </div> 
                 </div>
                 <hr>
-                <div class="box box-slim col-md-offset-2 col-sm-10">
+                <div class="box box-slim">
                         <div class="table-custom">
                             <dl class="dl-horizontal">
                                 <dt>2]</dt><dd> Java Developer <span class="project-duration">May 2020 - July 2020</span> </dd>
                                 <dt>Title</dt>
-                                <dd>Empirix DOR (Diagnostix Operational Reports)</dd>
+                                <dd>Empirix - TLC</dd>
                                 <!-- <dt>Domain</dt><dd> Web Technology</dd> -->
                                 <dt>Responsibilites</dt>
                                 <dd>
@@ -319,7 +319,7 @@
                         </div> 
                      </div>
                      <hr>
-                     <div class="box box-slim col-md-offset-2 col-sm-10">
+                     <div class="box box-slim">
                             <div class="table-custom">
                                 <dl class="dl-horizontal">
                                     <dt>3]</dt><dd> Junior UI Developer  <span class="project-duration">Jan 2020 - May 2020</span> </dd>
