opening sites in new tab

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                 </dl>
 
                 <div class="social">
-                    <a href="http://www.linkedin.com/in/shivrajhulbatte" data-toggle="linkedin" title="LinkedIn"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-                    <a href="https://github.com/shivrajpro" data-toggle="github" title="GitHub"><i class="fa fa-github" aria-hidden="true"></i></a>
-                    <a href="https://www.hackerrank.com/shivrajhulbatte" data-toggle="hackerrank" title="HackerRank"><span class="simple-svg" data-icon="simple-icons:hackerrank" data-inline="false"></span></a>
+                    <a target="_blank" href="http://www.linkedin.com/in/shivrajhulbatte" data-toggle="linkedin" title="LinkedIn"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                    <a target="_blank" href="https://github.com/shivrajpro" data-toggle="github" title="GitHub"><i class="fa fa-github" aria-hidden="true"></i></a>
+                    <a target="_blank" href="https://www.hackerrank.com/shivrajhulbatte" data-toggle="hackerrank" title="HackerRank"><span class="simple-svg" data-icon="simple-icons:hackerrank" data-inline="false"></span></a>
                 </div>
             </article>
         </section>
@@ -366,9 +366,9 @@
         <div >
             <div class="social" >               
                 <div class="navbar-fixed-bottom">
-                        <a href="http://www.linkedin.com/in/shivrajhulbatte"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-                        <a href="https://github.com/shivrajpro"><i class="fa fa-github" aria-hidden="true"></i></a>
-                        <a href="https://www.hackerrank.com/shivrajhulbatte"><span class="simple-svg" data-icon="simple-icons:hackerrank" data-inline="false"></span></a>
+                        <a target="_blank" href="http://www.linkedin.com/in/shivrajhulbatte"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                        <a target="_blank" href="https://github.com/shivrajpro"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        <a target="_blank" href="https://www.hackerrank.com/shivrajhulbatte"><span class="simple-svg" data-icon="simple-icons:hackerrank" data-inline="false"></span></a>
                 </div>
                 <p class="small-text" style="text-align: center;">&copy;2021 Shivraj Hulbatte</p>
             </div>
