--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
                                     <h2><i class="fa fa-graduation-cap"></i></h2>
                                     <h4>CGPA</h4>
                                     <h3>8.24</h3>
-                                    <h4>(aggr. till last semester)</h4>
                                 </div>
                             </div>
                     </div>
@@ -275,8 +274,8 @@
                 <div class="box box-slim">
                    <div class="table-custom">
                         <dl class="dl-horizontal">
-                                <dt>1]</dt><dd> UI Developer <span class="project-duration">Aug 2020 - Present</span>  </dd>
-                                <dt>Title</dt>
+                                <dt></dt><dd> <span class="designation">   UI Developer   </span> <span class="project-duration">Aug 2020 - Present</span>  </dd>
+                                <dt>Project</dt>
                                 <dd>Empirix DOR (Diagnostix Operational Reports)</dd>
                                 <!-- <dt>Domain</dt><dd> Web Technology</dd> -->
                                 <dt>Responsibilites</dt>
@@ -298,8 +297,8 @@
                 <div class="box box-slim">
                         <div class="table-custom">
                             <dl class="dl-horizontal">
-                                <dt>2]</dt><dd> Java Developer <span class="project-duration">May 2020 - July 2020</span> </dd>
-                                <dt>Title</dt>
+                                <dt></dt><dd> <span class="designation">   Java Developer   </span><span class="project-duration">May 2020 - July 2020</span> </dd>
+                                <dt>Project</dt>
                                 <dd>Empirix - TLC</dd>
                                 <!-- <dt>Domain</dt><dd> Web Technology</dd> -->
                                 <dt>Responsibilites</dt>
@@ -322,8 +321,8 @@
                      <div class="box box-slim">
                             <div class="table-custom">
                                 <dl class="dl-horizontal">
-                                    <dt>3]</dt><dd> Junior UI Developer  <span class="project-duration">Jan 2020 - May 2020</span> </dd>
-                                    <dt>Title</dt>
+                                    <dt></dt><dd> <span class="designation">Junior UI Developer</span> <span class="project-duration">Jan 2020 - May 2020</span> </dd>
+                                    <dt>Project</dt>
                                     <dd>One Sight Flash Removal Project</dd>
                                     <!-- <dt>Domain</dt><dd> Web Technology</dd> -->
                                     <dt>Responsibilites</dt>
