--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shivraj Hulbatte Portfolio</title>
+    <link rel="icon" type="image/png" href="/images/my-favicon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Nova+Square" rel="stylesheet"> 
     <link rel="stylesheet" href="lib/paper.bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
