improving designation css

--- a/index.html
+++ b/index.html
@@ -275,7 +275,11 @@
                 <div class="box box-slim">
                    <div class="table-custom">
                         <dl class="dl-horizontal">
-                                <dt></dt><dd> <span class="designation">   UI Developer   </span> <span class="project-duration">Aug 2020 - Present</span>  </dd>
+                                <dt></dt>
+                                <dd>
+                                    <strong><span class="designation">UI Developer</span></strong>
+                                    <span class="project-duration">Aug 2020 - Present</span>
+                                </dd>
                                 <dt>Project</dt>
                                 <dd>Empirix DOR (Diagnostix Operational Reports)</dd>
                                 <!-- <dt>Domain</dt><dd> Web Technology</dd> -->
@@ -298,7 +302,10 @@
                 <div class="box box-slim">
                         <div class="table-custom">
                             <dl class="dl-horizontal">
-                                <dt></dt><dd> <span class="designation">   Java Developer   </span><span class="project-duration">May 2020 - July 2020</span> </dd>
+                                <dt></dt><dd> 
+                                    <strong><span class="designation">Java Developer</span></strong>
+                                    <span class="project-duration">May 2020 - July 2020</span>
+                                 </dd>
                                 <dt>Project</dt>
                                 <dd>Empirix - TLC</dd>
                                 <!-- <dt>Domain</dt><dd> Web Technology</dd> -->
@@ -322,7 +329,11 @@
                      <div class="box box-slim">
                             <div class="table-custom">
                                 <dl class="dl-horizontal">
-                                    <dt></dt><dd> <span class="designation">Junior UI Developer</span> <span class="project-duration">Jan 2020 - May 2020</span> </dd>
+                                    <dt></dt>
+                                    <dd>
+                                        <strong><span class="designation">Junior UI Developer</span></strong>
+                                        <span class="project-duration">Jan 2020 - May 2020</span>
+                                    </dd>
                                     <dt>Project</dt>
                                     <dd>One Sight Flash Removal Project</dd>
                                     <!-- <dt>Domain</dt><dd> Web Technology</dd> -->
