--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </article>
 
             <article class="col-md-6"> 
-                <h5 class="text-justify">As a software engineer at Persistent Systems, I am working on designing and developing web applications in various web technologies like HTML5/CSS3, JavaScript, Angular and Java. Specializes in Angular and responsive design.</h5>
+                <h5 class="text-justify">As a software engineer at <span><a  style="color:orangered;" target="_blank" href="https://www.persistent.com/">Persistent Systems</a></span>, I am working on designing and developing web applications in various web technologies like HTML5/CSS3, JavaScript, Angular and Java. Specializes in Angular and responsive design.</h5>
             </article>
 
             <article class="col-md-6 table-custom">
@@ -153,9 +153,11 @@
                                             </div>
                                         </div>
                         </div>
-                </div> 
+                </div>
+                <p class="help-block">tap/hover over the cards</p> 
             </div>
             </article>
+            
         </section>
 
         <section class="row">
@@ -341,8 +343,8 @@
                                     <dd>
                                         <ul>
                                             <li>In this project I learned the popular JavaScript charting library D3.js. used for data visualization</li>
-                                            <li>Create different types of chart like bar chart, scatter chart, area chart, etc. using the JSON response coming from back end</li>
-                                            <li>Cooperating with the back-end developer in the process of building the RESTful API</li>
+                                            <li>Create different types of charts like bar chart, scatter chart, area chart, etc. using the JSON response coming from back end</li>
+                                            <li>Coordinating  with the back-end developer in the process of building the RESTful API</li>
                                             <li>Unit testing of all the charts created</li>
                                             <li>Worked on bug fixes and improvements needed in the charts</li>
                                         </ul>
@@ -381,7 +383,7 @@
                         <a target="_blank" href="https://github.com/shivrajpro"><i class="fa fa-github" aria-hidden="true"></i></a>
                         <a target="_blank" href="https://www.hackerrank.com/shivrajhulbatte"><span class="simple-svg" data-icon="simple-icons:hackerrank" data-inline="false"></span></a>
                 </div>
-                <p class="small-text" style="text-align: center;">&copy;2021 Shivraj Hulbatte</p>
+                <p class="small-text" style="text-align: center;">Copyright &copy; 2021. Developed by Shivraj Hulbatte. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
