adding recipe book to projects section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <li><a href="#education">Education</a></li>
                         <li><a href="#skills">Skils</a></li>
                         <li><a href="#work">Work</a></li>
-                        <!-- <li><a href="#projects">Projects</a></li> -->
+                        <li><a href="#projects">Projects</a></li>
                 </ul>
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
@@ -64,7 +64,12 @@
             </article>
 
             <article class="col-md-6"> 
-                <h5 class="text-justify">As a software engineer at <span><a  style="color:orangered;" target="_blank" href="https://www.persistent.com/">Persistent Systems</a></span>, I am working on designing and developing web applications in various web technologies like HTML5/CSS3, JavaScript, Angular and Java. Specializes in Angular and responsive design.</h5>
+                <h5 class="text-justify">As a software engineer at <span><a  style="color:orangered;" target="_blank" href="https://www.persistent.com/">Persistent Systems</a></span>, I am working on designing and developing web applications in various web technologies like HTML5/CSS3, JavaScript, Angular and Java. Specializes in Angular and responsive design. Flexible and interested to learn and work on ReactJS.</h5>
+
+                <br><br>
+                <h3><q>User Interface is like a humor. If you have to explain it, it's not that good</q>
+                </h3>
+                <p style="font-size: 3rem;" >- Cory House</p>
             </article>
 
             <article class="col-md-6 table-custom">
@@ -358,7 +363,7 @@
                 </article>
         </section>
 
-        <!-- <section class="row">
+        <section class="row">
             <div class="hidden-xs fill-screen fixed-bg" style="background-image:url(images/home-office.jpg)"></div>
         </section>
 
@@ -369,10 +374,37 @@
             </article>
 
             <article class="col-md-12">
-                    <p style="font-size: 20px; ">Four Weeks “Internship” at <a href="http://www.smartscm.com"><strong>Smart Supply Chain Management System Software</strong></a> PVT.LTD. Kalyani Nagar,Yerwada,Pune-411006</p>
-                    <p class="text-justify; margin-left:10px;" style="font-size: 18px;" >Worked on a project titled "Tracking Geolocation of Users by using Google Maps API" with the help of which I learned how to use 3rd party APIs to meet the organizational need in real world.</p>
+                <div class="box box-slim">
+                    <div class="table-custom">
+                         <dl class="dl-horizontal">
+                                 <dt></dt>
+                                 <dd>
+                                     <strong><span class="designation">Recipe Book</span></strong>
+                                     <!-- <span class="project-duration">Aug 2020 - Present</span> -->
+                                 </dd>
+                                 <!-- <dt>Domain</dt><dd> Web Technology</dd> -->
+                                 <dt>Description</dt>
+                                 <dd>
+                                     <ul>
+                                         <li>In this project a user can add/update/delete a recipe. Each recipe has following information : name, image URL, description, ingredients of the recipe</li>
+                                         <li>User can store or fetch the data anytime</li>
+                                         <li>SignIn/SignUp/SignOut functionality using firebase</li>
+                                     </ul>
+                                 </dd>
+                                 <dt>Link</dt>
+                                 <dd>
+                                     <ul>
+                                         <li>You can give a visit to this project at this <a href="https://ng-course-recipe-book-5ad9f.web.app" target="_blank">link</a></li>
+                                     </ul>
+                                 </dd>
+                                 <dt>Technology</dt>
+                                 <dd>Angular 10, Bootstrap and Firebase</dd>
+                             </dl>
+         
+                    </div> 
+                 </div>
             </article>
-        </section> -->
+        </section>
     </div>
 
     <footer class="container-fluid">
