adding collapsable card for work and projects

--- a/index.html
+++ b/index.html
@@ -280,11 +280,12 @@
 
             <article class="row">
                 <div class="box box-slim">
+                    <button class="toggle-card" onclick="expandCollapseCard(this)"><i class="fa fa-chevron-up"></i> </button>
                    <div class="table-custom">
                         <dl class="dl-horizontal">
                                 <dt></dt>
                                 <dd>
-                                    <strong><span class="designation">UI Developer</span></strong>
+                                    <strong><span class="designation">Front End Developer</span></strong>
                                     <span class="project-duration">Aug 2020 - Present</span>
                                 </dd>
                                 <dt>Project</dt>
@@ -307,6 +308,8 @@
                 </div>
                 <hr>
                 <div class="box box-slim">
+                    <button class="toggle-card" onclick="expandCollapseCard(this)"><i class="fa fa-chevron-up"></i> </button>
+
                         <div class="table-custom">
                             <dl class="dl-horizontal">
                                 <dt></dt><dd> 
@@ -334,6 +337,8 @@
                      </div>
                      <hr>
                      <div class="box box-slim">
+                        <button class="toggle-card" onclick="expandCollapseCard(this)"><i class="fa fa-chevron-up"></i> </button>
+
                             <div class="table-custom">
                                 <dl class="dl-horizontal">
                                     <dt></dt>
@@ -375,6 +380,7 @@
 
             <article class="col-md-12">
                 <div class="box box-slim">
+                    <button class="toggle-card" onclick="expandCollapseCard(this)"><i class="fa fa-chevron-up"></i> </button>
                     <div class="table-custom">
                          <dl class="dl-horizontal">
                                  <dt></dt>
@@ -386,9 +392,8 @@
                                  <dt>Description</dt>
                                  <dd>
                                      <ul>
-                                         <li>In this project a user can add/update/delete a recipe. Each recipe has following information : name, image URL, description, ingredients of the recipe</li>
+                                         <li>This project is developed to understand and demonstrate all the core and important features of google's Angular Framework. The features include modules, components, directives, pipes, routing, services, and others</li>
                                          <li>User can store or fetch the data anytime</li>
-                                         <li>SignIn/SignUp/SignOut functionality using firebase</li>
                                      </ul>
                                  </dd>
                                  <dt>Link</dt>
