fixing collapse issue for work section

--- a/index.html
+++ b/index.html
@@ -294,14 +294,14 @@
                                 <dt>Responsibilites</dt>
                                 <dd>
                                     <ul>
-                                        <li>Working as an Angular developer in this project</li>
-                                        <li>Analyze the requirement given by client and discussing the approach with the lead to meet the requirement</li>
-                                        <li>Implement the required feature, test it and send the code for review to lead
-                                        </li>
+                                        <li>In this project I’m a part of UI team and working majorly on AngularJS</li>
+                                        <li>My daily tasks generally include converting the given UI mockups to code, creating new components, or improving the existing ones, implement REST APIs, fixing critical issues if any and much more</li>
+                                        <li>Follow best software engineering practices, including code reviews, debugging, troubleshooting and agile development</li>
+                                        <li>Regular status update to the client with proactive suggestions</li>
                                     </ul>
                                 </dd>
                                 <dt>Technology</dt>
-                                <dd>Angular, Typescript, Docker and Git</dd>
+                                <dd>JavaScript, AngularJS, HTML5, SCSS, ES6, Git & Docker</dd>
                             </dl>
         
                    </div> 
@@ -314,7 +314,7 @@
                             <dl class="dl-horizontal">
                                 <dt></dt><dd> 
                                     <strong><span class="designation">Java Developer</span></strong>
-                                    <span class="project-duration">May 2020 - July 2020</span>
+                                    <span class="project-duration">Apr 2020 - July 2020</span>
                                  </dd>
                                 <dt>Project</dt>
                                 <dd>Empirix - TLC</dd>
@@ -344,7 +344,7 @@
                                     <dt></dt>
                                     <dd>
                                         <strong><span class="designation">Junior UI Developer</span></strong>
-                                        <span class="project-duration">Jan 2020 - May 2020</span>
+                                        <span class="project-duration">Jan 2020 - Mar 2020</span>
                                     </dd>
                                     <dt>Project</dt>
                                     <dd>One Sight Flash Removal Project</dd>
@@ -360,7 +360,7 @@
                                         </ul>
                                     </dd>
                                     <dt>Technology</dt>
-                                    <dd>HTML5/CSS3, AngularJS, jQuery, D3.js and AJAX</dd>
+                                    <dd>JavaScript, D3.js, HTML5/CSS3, jQuery and AJAX</dd>
                                 </dl>
                  
                             </div> 
