change company name

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
             </article>
 
             <article class="col-md-6"> 
-                <h5 class="text-justify">As a software engineer at <span><a  style="color:orangered;" target="_blank" href="https://www.persistent.com/">Persistent Systems</a></span>, I am working on designing and developing web applications in various web technologies like HTML5/CSS3, JavaScript, Angular and Java. Specializes in Angular and responsive design. Flexible and interested to learn and work on ReactJS.</h5>
+                <h5 class="text-justify">As a software engineer at <span>
+                    <a  style="color:#2196f3;" target="_blank" href="https://coditas.com">
+                        Coditas</a>
+                    </span>, I am working on designing and developing web applications in various web technologies like HTML5/CSS3, JavaScript, Angular and Java. Specializes in Angular and responsive design. Flexible and interested to learn and work on ReactJS.</h5>
 
                 <br><br>
                 <h3><q>User Interface is like a humor. If you have to explain it, it's not that good</q>
@@ -420,7 +423,7 @@
                         <a target="_blank" href="https://github.com/shivrajpro"><i class="fa fa-github" aria-hidden="true"></i></a>
                         <a target="_blank" href="https://www.hackerrank.com/shivrajhulbatte"><span class="simple-svg" data-icon="simple-icons:hackerrank" data-inline="false"></span></a>
                 </div>
-                <p class="small-text" style="text-align: center;">Copyright &copy; 2021. Developed by Shivraj Hulbatte. All Rights Reserved.</p>
+                <p class="small-text" style="text-align: center;">Copyright &copy; 2022. Developed by Shivraj Hulbatte. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
